# backend_server_android

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: lab  server.py
src/: main.cpp  server.cpp
src/examples/: client.c
